:green_heart: CI 测试 master 分支

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 # 语言
 language: java
+#mvnw权限配置
+before_install:
+  - chmod +x mvnw
 # 执行脚本
 script: "mvn clean package -Dmaven.javadoc.skip=true -B -V"
 # 通知
