--- a/spring-form-auth/pom.xml
+++ b/spring-form-auth/pom.xml
@@ -33,4 +33,12 @@
             <version>${lombok.version}</version>
         </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
