--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
         <module>spring-security-common</module>
         <module>spring-form-jwt-auth</module>
         <module>spring-sms-jwt-auth</module>
+        <module>spring-security-oauth2-social</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
