--- a/spring-security-oauth2-social/pom.xml
+++ b/spring-security-oauth2-social/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>spring-security-oauth2</artifactId>
+    <artifactId>spring-security-oauth2-social</artifactId>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
