增加springboot 获取应用参数

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
         <module>spring-security-oauth2-social</module>
         <module>spring-boot-saml2-auth</module>
         <module>spring-cache-demo</module>
+        <module>spring-boot-arg-demo</module>
+
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
