--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>spring-boot-saml2-auth</module>
         <module>spring-cache-demo</module>
         <module>spring-boot-arg-demo</module>
+        <module>spring-boot-json-demo</module>
 
     </modules>
     <parent>
