增加自定义实现autoconfigure 基于springboot2.7.0 @autoconfigure 注解实现

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>spring-boot-arg-demo</module>
         <module>spring-boot-json-demo</module>
         <module>spring-boot-task-demo</module>
+        <module>spring-boot-customer-starter</module>
 
     </modules>
     <parent>
