增加 RedisTemplate 自定义 RedisSerializer

--- a/spring-boot-redisson-demo/src/main/resources/application.yml
+++ b/spring-boot-redisson-demo/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 spring:
   redis:
     database: 0
-    password: xxxxxx
+    password: xxx
     port: 6379
     timeout: 3000
     host: localhost
