增加redis cache 使用、添加redis stream 简单demo :zap:

--- a/spring-boot-redisson-demo/src/main/resources/application.yml
+++ b/spring-boot-redisson-demo/src/main/resources/application.yml
@@ -3,7 +3,13 @@ server:
 spring:
   redis:
     database: 0
-    password: xxx
+    password: XEeNxUmPnw3eH7
     port: 6379
     timeout: 3000
-    host: localhost
+    host: 192.168.99.229
+  cache:
+    cache-names: IndexController
+    type: redis
+logging:
+  level:
+    root: info
