add resilience4j demo

--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
         <module>spring-boot-retry-demo</module>
         <module>spring-boot-redisson-demo</module>
         <module>spring-boot-mongodb-demo</module>
-
+        <module>spring-boot-resilience4j-demo</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
