--- a/spring-boot-openfeign-demo/src/main/resources/application.properties
+++ b/spring-boot-openfeign-demo/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.application.name= spring-boot-openfeign-demo
 feign.client.config.remoteHelloService.connect-timeout=1200
 feign.client.config.remoteHelloService.read-timeout=1200
 feign.httpclient.connection-timeout=3000
+# ??feign client ????
+logging.level.com.bearboy.openfeign.interfaces.RemoteHelloService= Debug
