--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>spring-boot-mongodb-demo</module>
         <module>spring-boot-resilience4j-demo</module>
         <module>spring-boot-openfeign-demo</module>
+        <module>spring-boot-tomcat-demo</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -31,7 +32,7 @@
         <relativePath/>
     </parent>
     <groupId>com.bearboy</groupId>
-    <artifactId>spring-security</artifactId>
+    <artifactId>spring-boot-demo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>spring-security</name>
     <description>springboot 整合spring security</description>
