--- a/spring-boot-openfeign-demo/pom.xml
+++ b/spring-boot-openfeign-demo/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.bearboy</groupId>
-        <artifactId>spring-security</artifactId>
+        <artifactId>spring-boot-demo</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
