--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>spring-boot-resilience4j-demo</module>
         <module>spring-boot-openfeign-demo</module>
         <module>spring-boot-tomcat-demo</module>
+        <module>spring-boot-kafka-demo</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -34,7 +35,7 @@
     <groupId>com.bearboy</groupId>
     <artifactId>spring-boot-demo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>spring-security</name>
+    <name>spring-boot-demo</name>
     <description>springboot 整合spring security</description>
 
     <properties>
