--- a/spring-boot-kafka-demo/src/main/resources/application.properties
+++ b/spring-boot-kafka-demo/src/main/resources/application.properties
@@ -1,8 +1,12 @@
 server.port=8100
 spring.kafka.bootstrap-servers=10.211.55.4:9092
 spring.kafka.consumer.group-id=myGroup
-##??kafka?????????value?????????
+spring.kafka.producer.client-id=myProducer
+spring.kafka.producer.transaction-id-prefix=my-producer-tx
+
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
-##??kafka???????????
+
 spring.kafka.consumer.properties.spring.json.trusted.packages =com.github.bearboy.kafka
+
+spring.kafka.consumer.enable-auto-commit=false
